2000-07-30  Sven Neumann  <sven@gimp.org>

	* plug-ins/gdyntext/gdyntext_ui.c: use gimp_ui_init(). This also
	fixes a bug we had fixed in the latest version but was
	reintroduced now by upgrading to 1.5.0. This caused empty text
	layers to be drawn when LANG != C. Seems to work fine now.

2000-07-30  Sven Neumann  <sven@gimp.org>
	
	* plug-ins/gdyntext/charmap.c
	* plug-ins/gdyntext/charmap_window.c
	* plug-ins/gdyntext/font_selection.c
	* plug-ins/gdyntext/gdyntext.[ch]
	* plug-ins/gdyntext/gdyntext_ui.c
	* plug-ins/gdyntext/gdyntextcompat.c
	* plug-ins/gdyntext/gdyntextutil.c: corrected various problems 
	with i18n
	
2000-07-30  Michael Natterer  <mitch@gimp.org>

	* gimp_splash.ppm: while trying to confuse ChangeLog readers
	with his log below, Tigert thought that GIMP thought that the
	.ppm extension determined the image's format. OTOH, GIMP thought
	that Tigert thought that he wanted to save the image as .png but
	with a broken extension. This can be considered either GIMP's
	bug or a bug of <tigert>/dev/brain. We can make a poll on this,
	but I suspect the broken "Save as..." to be the one to blame.

2000-07-30  Sven Neumann  <sven@gimp.org>

	* plug-ins/gdyntext/graphics/layer_align_[0-9].xpm
	* plug-ins/gdyntext/gdyntextcompat.[ch]
	* plug-ins/gdyntext/gdyntextutil.[ch]: new files
	
	* plug-ins/gdyntext/ChangeLog
	* plug-ins/gdyntext/Makefile.am
	* plug-ins/gdyntext/README
	* plug-ins/gdyntext/TODO
	* plug-ins/gdyntext/charmap.[ch]
	* plug-ins/gdyntext/charmap_window.[ch]
	* plug-ins/gdyntext/font_selection.[ch]
	* plug-ins/gdyntext/gdyntext.[ch]
	* plug-ins/gdyntext/gdyntext_ui.[ch]
	* plug-ins/gdyntext/message_window.[ch]: updated to version 1.5.0 
	of the GDynText plug-in. This seems to fix a number of problems 
	with the Dynamic Text tool including bugs #2355 and #16485.

2000-07-30  Tuomas Kuosmanen  <tigert@gimp.org>

	* gimp_splash.ppm: oops, mitch thought that I thought that he thought